--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<h3>Erste Schritte mit der Python-IDLE</h3>
 	</div>
 	<div class="text">
-		<p>Wenn ihr nach der Installation die <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder.<span id="shell"> Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann, ist es auf lange Sicht allerdings nicht optimal.</span> Wenn man also in naher Zukunft auch grössere Programme programmieren möchte, und das ist hier klar ein Ziel, sollte man früher oder später vollwertige Programme schreiben und mit richtigen <a  href=#quellcode><span style="color:blue">Quellcode</span></a> arbeiten will, sollte man mit dem Editor arbeiten. Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt, müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!</span></p>	</div>
+		<p>Wenn Ihr nach der Installation nun die <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> öffnet (Ihr könnt unter Windows nach "IDLE" suchen und diese dann öffnen) findet Ihr Euch in der sogenannten Shell wieder.<span id="shell"> Die Shell bietet sich für den Anfang an, ist allerdings auf lange Sicht allerdings nicht optimal, da man nur eine Zeile pro Eingabe speichern kann, ist es .</span> Wenn man also in naher Zukunft auch grössere Programme programmieren möchte, und das ist hier klar das Ziel, sollte man früher oder später vollwertige Programme schreiben und mit richtigen <a  href=#quellcode><span style="color:blue">Quellcode</span></a> arbeiten will, sollte man mit dem Editor arbeiten. Wenn Ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt Ihr Control + O (oder über den Reiter "File" --> "Open...") oder wenn ihr ein neues Dokument erstellen wollt, müsst ihr Control + N (oder "File" --> "New File") drücken.  Jetzt seid Ihr bereit, Euer erstes Programm zu schreiben!</span></p>	</div>
 
 	<div class="question">
 	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (<span id="pointquestion1"></span>/1P.)</p>
@@ -71,7 +71,7 @@
 	<div id="question1" value="unsolved" class="answers">
 	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question1('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der .s und damit auch des Editors.</label><br><br>
 	<input class="buttons" type="button" name="button2" value="" id="false" onclick="Question1('button2')"><label class="answer" id="answer2">Man kann beim Editor seine Arbeit nicht speichern</label><br><br>
-	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question1('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label><br><br>
+	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question1('button3')"><label class="answer" id="answer3">Im Gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label><br><br>
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question1('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> <br><br>	
 	</div>
 	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution">Die letzte Aussage ist wahr. Es sollte klar aus dem letzten Abschnitt hervorgehen.</span></button>
@@ -88,7 +88,7 @@
 	</div>
 	<button id="solutionbutton3"  class="solutionbutton" onclick="solution(solutionbutton3)"><span id="solutiontag3">Lösung anzeigen</span><span id="solution3" class="solution">Die erste Aussage ist falsch, da der Sourcecode nichts mit einer IDE zu tun hat. Ausserdem ist die zweitletzte Aussage falsch, da die Python IDE nicht auf Windows vorinstalliert ist (sonst müsste man es wohl kaum herunterladen). Ausserdem ist die Python IDLE eine DIE (Integrated Development Environment)</span></button>
 <div class="question" id="question">
-	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (<span id="pointimagemap"></span>/1P.)</p>
+	<p>Welchen Reiter müsstest du auswählen, wenn du in der Python IDE einen bereits bestehender Sourcecode bearbeiten möchten würdest. (<span id="pointimagemap"></span>/1P.)</p>
 	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
 	</div>
 	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Lese den letzten Abschnitt nochmal, überlege dir alternativ, wie du es bei verbreiteten Editoren, wie zum Beispiel Word, machen würdest.</p>
